Commit In-class Exercise 2

--- a/In-class_Ex/In-class_Ex02/In-class_Ex02.qmd
+++ b/In-class_Ex/In-class_Ex02/In-class_Ex02.qmd
@@ -1,5 +1,5 @@
 ---
-title: "In-class Exercise 2 (WIP)"
+title: "In-class Exercise 2: Thailand Road Accident Case Study"
 title-block-banner: true
 date: "02-Sep-24"
 date-modified: "last-modified"
@@ -19,37 +19,49 @@ format:
     code-line-numbers: false
 ---
 
-![](images/placeholder.PNG){fig-align="center"}
 
-# 1 Overview
+# Requirements
 
-# 2 The Packages
+-   Check units of measurement in projected coordinates system
 
-::: panel-tabset
-## Packages
-
-| Package                                                                                                                                   | Usage                                                                                                                                                                                                                                                                                                          |
-|---------------------------|---------------------------------------------|
-| [**olsrr**](https://olsrr.rsquaredacademy.com/)                                                                                           | For building OLS and performing diagnostics tests. Enhances the capabilities of the basic linear modeling functionality and provides a comprehensive set of regression diagnostics, model comparisons, and other statistics, including normality of residuals, homoscedasticity, and influential observations. |
-| [**GWmodel**](https://cran.r-project.org/web/packages/GWmodel/)                                                                           | For calibrating geographical weighted family of models                                                                                                                                                                                                                                                         |
-| [**corrplot**](https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html)                                            | For multivariate data visualisation and analysis, particularly to visualise correlation matrix.                                                                                                                                                                                                                |
-| [**ggpubr**](https://rpkgs.datanovia.com/ggpubr/)                                                                                         | For some easy-to-use functions for creating and customizing 'ggplot2'- based publication ready plots.                                                                                                                                                                                                          |
-| [**sf**](https://cran.r-project.org/web/packages/sf/index.html)                                                                           | For spatial data handling.                                                                                                                                                                                                                                                                                     |
-| [**tmap**](https://cran.r-project.org/web/packages/tmap/)                                                                                 | Choropleth mapping; thematic maps                                                                                                                                                                                                                                                                              |
-| [**tidyverse**](https://www.tidyverse.org/)                                                                                               | Attribute data handling                                                                                                                                                                                                                                                                                        |
-| [**gtsummary**](https://www.danieldsjoberg.com/gtsummary/)                                                                                | Summarises data sets, regression models, and more, using sensible defaults with highly customisable capabilities.                                                                                                                                                                                              |
-| [**DT**](https://rstudio.github.io/DT/), [**knitr**](https://yihui.org/knitr/), [**kableExtra**](https://haozhu233.github.io/kableExtra/) | For building tables                                                                                                                                                                                                                                                                                            |
-
-: {tbl-colwidths="\[20,80\]"}
-
-## Code
+# The Packages
 
 ```{r}
-pacman::p_load(olsrr, GWmodel, corrplot, 
-               ggpubr, sf, spdep, 
-               tmap, tidyverse, gtsummary,
-               DT, knitr, kableExtra)
+pacman::p_load(sf, tmap, tidyverse)
 ```
-:::
 
-# 3 The Data
+# Loading the Data
+
+
+## Traffic Accident Data
+
+```{r}
+rdacc_sf <- read_csv("data/geospatial/thai_road_accident_2019_2022.csv") %>%
+  filter(!is.na(longitude) & longitude != "",
+         !is.na(latitude) & latitude !="") %>% 
+  st_as_sf(coords = c(
+    "longitude", "latitude"),
+    crs = 4326) %>% 
+  st_transform(crs = 32647)
+```
+
+## Administrative Boundary
+
+```{r}
+adminboundary <- st_read(dsn = "data/geospatial", 
+                layer = "geoBoundaries-THA-ADM0")
+```
+
+```{r}
+par(bg = '#E4D5C9')
+
+plot(adminboundary)
+```
+
+
+## Thai Roads
+
+```{r}
+roads <- st_read(dsn = "data/geospatial", 
+                layer = "hotosm_tha_roads_lines_shp")
+```
